fixed nav alignment

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -30,6 +30,9 @@ h1,h2,h3,h4,h5,h6 {
     letter-spacing: 1px;
     font-size:1.3em;
     font-weight:700;
+    width:60%;
+    display:block;
+    float:left;
 }
 
 a {
@@ -41,6 +44,8 @@ a {
     padding:1em 0;
     font-family: halyard-display, sans-serif;
     border-bottom:2px dotted #39393920;
+float:left;
+width:100%;
 }
 .nav a {
     margin:0;
@@ -86,6 +91,10 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     float:right;
 }
 .links {
+    float:right;
+    display:block;
+    width:40%;
+    text-align:right;
 }
 
 .links a {
@@ -127,3 +136,4 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .text-muted {
     color:rgb(136, 136, 136);
 }
+
